# nu_plugin_ls_colorize

./: Cargo.toml  README.md
src/: color_utils.rs  main.rs  tests.rs
